fix: header logo shift, h4 font flicker, login redirect and slow-load notice
- Fix logo shifting right during loading by replacing :last-child selector
  with explicit .user-info-container class for margin-left: auto
- Fix h4 'Mask Stock' font size flickering by setting explicit font-size: 1.1rem
- Show Render cold-start explanation only after 5s of loading instead of always
- Remove 'Bejelentkezve' message on login; redirect immediately on success
- Add .env.example for documenting required environment variables

--- a/src/style/scss/header.scss
+++ b/src/style/scss/header.scss
@@ -14,10 +14,6 @@
     display: flex;
     align-items: center;
 
-    &:last-child {
-      margin-left: auto;
-    }
-
     p {
       margin: 0 5px;
     }
@@ -26,6 +22,14 @@
       width: 50px;
       height: 50px;
     }
+
+    h4 {
+      font-size: 1.1rem;
+    }
+  }
+
+  .user-info-container {
+    margin-left: auto;
   }
 
   .logout {
